tests/syntax_error/double_with_E.jou
def foo() -> None:
    # Uppercase E is banned because it looks visually similar to surrounding digits.
    # It looks like 2E3 is a thing, but it isn't.
    x = 1.2e3
    y = 1.2E3  # Error: invalid number or variable name "1.2E3"
